fixed overflow

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -49,6 +49,7 @@
       margin: 0px 0px 0px 20px;
       transition: all 0.3s ease;
       &:hover {
+				color: tomato;
         transform: scale(1.1);
       }
     }
