--- a/src/pages/Contacts/styles.scss
+++ b/src/pages/Contacts/styles.scss
@@ -16,7 +16,7 @@
 	margin: 0px 0px 40px 0px;
 	transition: all .3s ease;
 	&:hover{
-		transform: scale(1.1);
+		transform: scale(1.01);
 
 	}
 }
@@ -45,7 +45,8 @@
 		transition: all .3s ease;
 		&:hover {
 			cursor: pointer;
-			transform: scale(1.1);
+			transform: scale(1.05);
+			color: tomato;
 		}
 		a{
 			text-decoration: underline;
