--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -5,7 +5,13 @@
     font-size: 3rem;
     margin: 0px 0px 30px 0px;
     line-height: 60px;
+		@media (max-width: 450px) {
+			font-size: 2rem;
+			line-height: 40px;
 
+			margin: 0px 0px 10px 0px;
+
+		}
     span {
       color: tomato;
     }
@@ -13,6 +19,7 @@
   h2 {
     font-size: 1.5rem;
     line-height: 30px;
+	
 
     a {
       color: tomato;
@@ -41,14 +48,19 @@
   }
 }
 .photo {
-  margin: 20px 0px 70px 0px;
+  margin: 20px 0px 80px 0px;
+	
   img {
     border-radius: 40px;
     max-width: 100%;
     max-height: 400px;
     transition: all 0.3s ease;
+		@media (max-width: 450px) {
+			max-height: 320px;
+
+		}
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.01);
     }
   }
 }
