--- a/src/pages/Portfolio/styles.scss
+++ b/src/pages/Portfolio/styles.scss
@@ -36,7 +36,7 @@
 		max-width: 100%;
 		transition: all .3s ease;
 		&:hover{
-			transform: scale(1.04);
+			transform: scale(1.01);
 		}
 	}
 }
